test/scc/expr/semantic-errors/124.t
void test()
{
	double d;
    struct
    {
        int* a;
    }
    b = { d };
}